# financial-agent-ui

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tailwind.config.ts
backend/: .env.example  Dockerfile  Makefile  README.md  hot_reload.py  pyproject.toml  requirements.txt
backend/gen_ui_backend/: chain.py  graph.py  server.py  types.py
backend/gen_ui_backend/tools/: financials.py  github.py  invoice.py  last_quote.py  prices.py  ticker_news.py  weather.py
backend/gen_ui_backend/tools/financials/search/: schema.py  tool.py
backend/gen_ui_backend/tools/insider_transactions/: schema.py  tool.py
backend/gen_ui_backend/tools/web_search/tavily/: schema.py  tool.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  next.config.mjs  package.json
frontend/ai/: message.tsx
frontend/app/: agent.tsx  globals.css  layout.tsx  page.tsx
frontend/app/ai/: agent.tsx
frontend/app/charts/: README.md  agent.tsx  filters.tsx  generate-orders.ts  layout.tsx  page.tsx  schema.ts
frontend/components/: web-search-results.tsx
frontend/components/prebuilt/: chart-container.tsx  chart-header.tsx  chart.tsx  chat.tsx  display-types-dialog.tsx  filter-options-dialog.tsx  filter.tsx  github.tsx  insider-transactions-table.tsx  invoice.tsx  line-items-table.tsx  loading-charts.tsx  message.tsx  weather.tsx
frontend/components/ui/: progress.tsx
frontend/lib/: mui.ts
frontend/src/agents/: finance.ts  tools.ts
frontend/src/app/: action.tsx  layout.tsx  page.tsx
frontend/src/components/: markdown.tsx  scroll-to-bottom-btn.tsx
frontend/src/components/llm/: financials.tsx  message-list.tsx  news.tsx
frontend/src/components/ui/: card.tsx  carousel.tsx  codeblock.tsx  stock-chart-header.tsx  stock-price.tsx
frontend/src/hooks/: use-streamable-text.ts
frontend/src/styles/: colors.ts  globals.css
frontend/utils/: client.tsx  server.tsx
src/agents/: finance.ts  system-prompt.ts  tools.ts
src/app/: action.tsx  layout.tsx
src/components/llm/: Chart.tsx  StockChart.tsx  StockChartHeader.tsx  chart.tsx  chat-input.tsx  chat.tsx  fcall.tsx  financials.tsx  message-list.tsx  message.tsx  news.tsx  system-prompt.ts
src/components/llm/tools/: tools.ts
src/components/ui/: badge.tsx  chart.tsx
src/hooks/: use-streamable-text.ts
src/lib/: polygon.ts  utils.ts
